--- a/ok.html
+++ b/ok.html
@@ -12,5 +12,13 @@
         <h3>my first blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum, possimus odit animi temporibus sint voluptatibus sit, necessitatibus nihil culpa tenetur, rerum quis. Tenetur repellat laudantium maiores in? Maiores, reiciendis!</p>
     </div>
+    <div>
+        <h3>my second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum, possimus odit animi temporibus sint voluptatibus sit, necessitatibus nihil culpa tenetur, rerum quis. Tenetur repellat laudantium maiores in? Maiores, reiciendis!</p>
+    </div>
+    <div>
+        <h3>my third blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum, possimus odit animi temporibus sint voluptatibus sit, necessitatibus nihil culpa tenetur, rerum quis. Tenetur repellat laudantium maiores in? Maiores, reiciendis!</p>
+    </div>
 </body>
 </html>
