--- a/ok.html
+++ b/ok.html
@@ -20,5 +20,13 @@
         <h3>my third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum, possimus odit animi temporibus sint voluptatibus sit, necessitatibus nihil culpa tenetur, rerum quis. Tenetur repellat laudantium maiores in? Maiores, reiciendis!</p>
     </div>
+    <div>
+        <h3>how to push incremental</h3>
+    <ol>
+        <li>add</li>
+        <li>commit</li>
+        <li>push</li>
+    </ol>
+    </div>
 </body>
 </html>
