--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
             <li>running</li>
         </ol>
     </div>
+    <div>
+        <h3>dadu kemon acho</h>
+            <img src="image/pic.jpg">
+    </div>
 </body>
 </html>
