new photo added

--- a/index.html
+++ b/index.html
@@ -40,5 +40,9 @@
         <h3>dadu kemon acho</h>
             <img src="image/pic.jpg">
     </div>
+    <div>
+        <h3>developer</h3>
+        <img src="image/download.png"
+    </div>
 </body>
 </html>
