--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1>I am Abdullah</h1>
+        <h1>I am Hero</h1>
         <h3>my first blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum, possimus odit animi temporibus sint voluptatibus sit, necessitatibus nihil culpa tenetur, rerum quis. Tenetur repellat laudantium maiores in? Maiores, reiciendis!</p>
     </div>
