--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div>
         <h1>I am Abdullah</h1>
+        <h1>Eroi</h1>
         <h3>my first blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum, possimus odit animi temporibus sint voluptatibus sit, necessitatibus nihil culpa tenetur, rerum quis. Tenetur repellat laudantium maiores in? Maiores, reiciendis!</p>
     </div>
